cedar-lean/UnitTest/parser_tests/negative/annotation_after_effect.cedar
permit @id("test") (principal, action, resource);
